[fix] visibility, placeholder img, file sessions,  create back btn,

--- a/resources/scss/partials/_product.scss
+++ b/resources/scss/partials/_product.scss
@@ -1,19 +1,22 @@
 // products
 
-
-.card.product{
-    overflow-y: auto;
-    &:hover{
-        box-shadow: 0px 0px 30px 5px rgba(120, 119, 118, 0.575);
-    }
-    .image{
-        height: 150px;
-        .card-img-top {
-            border-radius: 10%;
-            overflow: hidden;
-            &:hover {
-                opacity: .9;
+    .card.product{
+        overflow-y: auto;
+        background-color: white;
+        &.unavaliable{
+        background-color: #7575753d;}
+        &:hover{
+            box-shadow: 0px 0px 30px 5px rgba(120, 119, 118, 0.575);
+        }
+        .image{
+            height: 150px;
+            .card-img-top {
+                border-radius: 10%;
+                overflow: hidden;
+                &:hover {
+                    opacity: .9;
+                }
             }
         }
     }
-}
+
